Debugging calculation of 1-RDM and 2-RDM

--- a/test_qi_metrics.ipynb
+++ b/test_qi_metrics.ipynb
@@ -16,9 +16,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converged SCF energy = -1.11675930739642\n",
-      "(4, 4) (4, 4, 4, 4)\n"
+      "converged SCF energy = -1.11675930739642\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-1.1167593073964248)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -26,7 +35,7 @@
     "from pyscf import ao2mo, gto, scf\n",
     "\n",
     "from tn4qa.dmrg import DMRG\n",
-    "from tn4qa.qi_metrics import get_two_orbital_rdm\n",
+    "from tn4qa.qi_metrics import get_one_orbital_rdm, get_two_orbital_rdm\n",
     "\n",
     "####\n",
     "# First we need to generate some test data\n",
@@ -41,47 +50,194 @@
     "\n",
     "# RHF calculation\n",
     "mf = scf.RHF(mol)\n",
-    "mf.kernel()\n",
-    "\n",
-    "# One-electron integrals\n",
-    "hcore = mf.get_hcore()\n",
-    "norb = hcore.shape[0]\n",
-    "\n",
-    "# Convert to spin-orbital basis\n",
-    "nso = 2 * norb\n",
-    "h1 = np.kron(np.eye(2), hcore)\n",
-    "\n",
-    "# Two-electron integrals (spatial orbital basis)\n",
-    "eri = mol.intor(\"int2e\")  # (ij|kl)\n",
-    "eri_spin = ao2mo.restore(1, eri, norb)  # 4-index in chemist's notation\n",
-    "\n",
-    "# Convert to spin-orbital integrals\n",
-    "g = np.zeros((nso, nso, nso, nso))\n",
-    "\n",
-    "# Fill spin-orbital 2e integrals\n",
-    "for p in range(norb):\n",
-    "    for q in range(norb):\n",
-    "        for r in range(norb):\n",
-    "            for s in range(norb):\n",
-    "                value = eri_spin[p, q, r, s]\n",
-    "                # alpha-alpha block\n",
-    "                g[2 * p, 2 * q, 2 * r, 2 * s] = value\n",
-    "                # beta-beta block\n",
-    "                g[2 * p + 1, 2 * q + 1, 2 * r + 1, 2 * s + 1] = value\n",
-    "\n",
-    "print(h1.shape, g.shape)"
+    "mf.kernel()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "from typing import Tuple\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "\n",
+    "def _one_body_integrals(self) -> np.ndarray:\n",
+    "    \"\"\"Get the one electron integrals.\"\"\"\n",
+    "    logger.debug(\"Calculating one body integrals.\")\n",
+    "    c_matrix_active = self.scf_method.mo_coeff\n",
+    "    logger.debug(f\"{c_matrix_active.shape=}\")\n",
+    "    logger.debug(f\"{c_matrix_active[0].shape=}\")\n",
+    "\n",
+    "    logger.debug(f\"{self.scf_method.get_hcore().shape=}\")\n",
+    "\n",
+    "    # Embedding procedure creates two different hcores\n",
+    "    # Using different v_eff\n",
+    "    if self.scf_method.get_hcore().ndim == 2:\n",
+    "        # Driver has not been used.\n",
+    "        hcore = [self.scf_method.get_hcore()] * 2\n",
+    "    elif self.scf_method.get_hcore().ndim == 3:\n",
+    "        # Driver has been used.\n",
+    "        hcore = self.scf_method.get_hcore()\n",
+    "\n",
+    "    # one body terms\n",
+    "    if not self._restricted:\n",
+    "        logger.info(\"Calculating unrestricted one body intergrals.\")\n",
+    "        one_body_integrals_alpha = c_matrix_active[0].T @ hcore[0] @ c_matrix_active[0]\n",
+    "        one_body_integrals_beta = c_matrix_active[1].T @ hcore[1] @ c_matrix_active[1]\n",
+    "\n",
+    "        one_body_integrals = np.array(\n",
+    "            [one_body_integrals_alpha, one_body_integrals_beta]\n",
+    "        )\n",
+    "\n",
+    "    else:\n",
+    "        logger.info(\"Calculating restricted one body integrals.\")\n",
+    "        # We double these up so that we have the same number as\n",
+    "        # the unrestricted case.\n",
+    "        one_body_integrals = np.array(\n",
+    "            [c_matrix_active.T @ self.scf_method.get_hcore() @ c_matrix_active] * 2\n",
+    "        )\n",
+    "    logger.debug(\"One body integrals found.\")\n",
+    "    logger.debug(f\"{one_body_integrals.shape}\")\n",
+    "\n",
+    "    return one_body_integrals\n",
+    "\n",
+    "\n",
+    "def _two_body_integrals(self) -> np.ndarray:\n",
+    "    \"\"\"Get the two electron integrals.\"\"\"\n",
+    "    logger.debug(\"Calculating two body integrals.\")\n",
+    "    c_matrix_active = self.scf_method.mo_coeff\n",
+    "\n",
+    "    if not self._restricted:\n",
+    "        n_orbs_alpha = c_matrix_active[0].shape[1]\n",
+    "        n_orbs_beta = c_matrix_active[1].shape[1]\n",
+    "\n",
+    "        # Could make this more flexible later.\n",
+    "        if n_orbs_alpha != n_orbs_beta:\n",
+    "            raise ValueError(\n",
+    "                \"Must localize the same number of alpha and beta orbitals.\"\n",
+    "            )\n",
+    "\n",
+    "        c_alpha = c_matrix_active[0]\n",
+    "        c_beta = c_matrix_active[1]\n",
+    "\n",
+    "        # Pyscf is in chemist notation\n",
+    "        # later we transpose to physicist notation for openfermion\n",
+    "        spin_options = {\n",
+    "            \"aaaa\": (c_alpha, c_alpha, c_alpha, c_alpha),\n",
+    "            \"bbbb\": (c_beta, c_beta, c_beta, c_beta),\n",
+    "            \"aabb\": (c_alpha, c_alpha, c_beta, c_beta),\n",
+    "            \"bbaa\": (c_beta, c_beta, c_alpha, c_alpha),\n",
+    "        }\n",
+    "\n",
+    "        two_body_integrals = []\n",
+    "        for spin in spin_options:\n",
+    "            two_body_compressed = ao2mo.kernel(self.scf_method.mol, spin_options[spin])\n",
+    "            eri = ao2mo.restore(1, two_body_compressed, n_orbs_alpha)\n",
+    "            two_body_integrals.append(np.asarray(eri.transpose(0, 2, 3, 1), order=\"C\"))\n",
+    "\n",
+    "    else:\n",
+    "        n_orbs = c_matrix_active.shape[1]\n",
+    "\n",
+    "        two_body_compressed = ao2mo.kernel(self.scf_method.mol, c_matrix_active)\n",
+    "\n",
+    "        # get electron repulsion integrals\n",
+    "        eri = ao2mo.restore(1, two_body_compressed, n_orbs)  # no permutation symmetry\n",
+    "\n",
+    "        # Copy this 4 times so that we have the same number as\n",
+    "        # the unrestricted case\n",
+    "        # Openfermion uses physicist notation whereas pyscf uses chemists\n",
+    "        two_body_integrals = [np.asarray(eri.transpose(0, 2, 3, 1), order=\"C\")] * 4\n",
+    "\n",
+    "    two_body_integrals = np.array(two_body_integrals)\n",
+    "\n",
+    "    logger.debug(\"Two body integrals found.\")\n",
+    "    logger.debug(f\"{two_body_integrals.shape}\")\n",
+    "    return two_body_integrals\n",
+    "\n",
+    "\n",
+    "def _spinorb_from_spatial(\n",
+    "    one_body_integrals: np.ndarray, two_body_integrals: np.ndarray\n",
+    ") -> Tuple[np.ndarray, np.ndarray]:\n",
+    "    \"\"\"Convert spatial integrals to spin-orbital integrals.\n",
+    "\n",
+    "    Args:\n",
+    "        one_body_integrals (np.ndarray): One-electron integrals in physicist notation.\n",
+    "        two_body_integrals (np.ndarray): Two-electron integrals in physicist notation.\n",
+    "\n",
+    "    Returns:\n",
+    "        one_body_coefficients (np.ndarray): One-electron coefficients in spinorb form.\n",
+    "        two_body_coefficients (np.ndarray): Two-electron coefficients in spinorb form.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    logger.debug(\"Converting to spin-orbital coefficients.\")\n",
+    "    n_qubits = one_body_integrals[0].shape[0] + one_body_integrals[1].shape[0]\n",
+    "\n",
+    "    # Initialize Hamiltonian coefficients.\n",
+    "    one_body_coefficients = np.zeros((n_qubits, n_qubits))\n",
+    "    two_body_coefficients = np.zeros((n_qubits, n_qubits, n_qubits, n_qubits))\n",
+    "\n",
+    "    # Loop through integrals.\n",
+    "    for p in range(n_qubits // 2):\n",
+    "        for q in range(n_qubits // 2):\n",
+    "            # Populate 1-body coefficients. Require p and q have same spin.\n",
+    "            one_body_coefficients[2 * p, 2 * q] = one_body_integrals[0, p, q]\n",
+    "            one_body_coefficients[2 * p + 1, 2 * q + 1] = one_body_integrals[1, p, q]\n",
+    "\n",
+    "            # Continue looping to prepare 2-body coefficients.\n",
+    "            # Assumes 2e ints are ordered as aaaa,bbbb,aabb,bbaa.\n",
+    "            for r in range(n_qubits // 2):\n",
+    "                for s in range(n_qubits // 2):\n",
+    "                    # Same spin\n",
+    "                    two_body_coefficients[2 * p, 2 * q, 2 * r, 2 * s] = (\n",
+    "                        two_body_integrals[0, p, q, r, s]\n",
+    "                    )\n",
+    "                    two_body_coefficients[\n",
+    "                        2 * p + 1, 2 * q + 1, 2 * r + 1, 2 * s + 1\n",
+    "                    ] = two_body_integrals[1, p, q, r, s]\n",
+    "\n",
+    "                    # Mixed spin in physicist\n",
+    "                    two_body_coefficients[2 * p, 2 * q + 1, 2 * r + 1, 2 * s] = (\n",
+    "                        two_body_integrals[2, p, q, r, s]\n",
+    "                    )\n",
+    "                    two_body_coefficients[2 * p + 1, 2 * q, 2 * r, 2 * s + 1] = (\n",
+    "                        two_body_integrals[3, p, q, r, s]\n",
+    "                    )\n",
+    "\n",
+    "    # Truncate.\n",
+    "    one_body_coefficients[np.absolute(one_body_coefficients) < 1e-8] = 0.0\n",
+    "    two_body_coefficients[np.absolute(two_body_coefficients) < 1e-8] = 0.0\n",
+    "\n",
+    "    return one_body_coefficients, two_body_coefficients\n",
+    "\n",
+    "\n",
+    "class MockBuilder:\n",
+    "    def __init__(self, scf_method):\n",
+    "        self.scf_method = scf_method\n",
+    "        self._restricted = True\n",
+    "\n",
+    "\n",
+    "mb = MockBuilder(mf)\n",
+    "\n",
+    "ones = _one_body_integrals(mb)\n",
+    "twos = _two_body_integrals(mb)\n",
+    "ones, twos = _spinorb_from_spatial(ones, twos)\n",
+    "qubit_labels = {i for i in range(ones.shape[0])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-2.2419189125842314\n"
+      "-1.1372838344885003\n"
      ]
     }
    ],
@@ -93,31 +249,32 @@
     "# Expected FCI energy is about -1.13\n",
     "for _ in range(1):\n",
     "    dmrg = DMRG(\n",
-    "        hamiltonian=(h1, g),\n",
+    "        hamiltonian=(ones, twos),\n",
     "        max_mps_bond=32,\n",
     "        method=\"two-site\",\n",
     "        hamiltonian_type=\"fermionic\",\n",
     "    )\n",
     "    dmrg.run(maxiter=10)\n",
-    "    print(dmrg.energy)"
+    "    print(dmrg.energy + mf.energy_nuc())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'complex' object has no attribute 'tensor_to_matrix'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m####\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Now we can find the RDMs\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m####\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m rdm2 \u001b[38;5;241m=\u001b[39m \u001b[43mget_two_orbital_rdm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdmrg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/MRes/rse/tn4qa/tn4qa/qi_metrics.py:200\u001b[0m, in \u001b[0;36mget_two_orbital_rdm\u001b[0;34m(mps, sites, direct, enforce_symmetry)\u001b[0m\n\u001b[1;32m    198\u001b[0m spin_orbitals_to_remove\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m sites[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    199\u001b[0m spin_orbitals_to_remove\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m sites[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m--> 200\u001b[0m rdm \u001b[38;5;241m=\u001b[39m \u001b[43mmps\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpartial_trace\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspin_orbitals_to_remove\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmatrix\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    201\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m enforce_symmetry:\n\u001b[1;32m    202\u001b[0m     \u001b[38;5;66;03m# TODO: enable enforcing symmetries\u001b[39;00m\n\u001b[1;32m    203\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "File \u001b[0;32m~/MRes/rse/tn4qa/tn4qa/mps.py:607\u001b[0m, in \u001b[0;36mMatrixProductState.partial_trace\u001b[0;34m(self, sites, matrix)\u001b[0m\n\u001b[1;32m    605\u001b[0m     output_inds \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m sites]\n\u001b[1;32m    606\u001b[0m     input_inds \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_P\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m sites]\n\u001b[0;32m--> 607\u001b[0m     \u001b[43mresult\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor_to_matrix\u001b[49m(input_idxs\u001b[38;5;241m=\u001b[39minput_inds, output_idxs\u001b[38;5;241m=\u001b[39moutput_inds)\n\u001b[1;32m    608\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'complex' object has no attribute 'tensor_to_matrix'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.013-0.j  0.   -0.j  0.   -0.j -0.   -0.j]\n",
+      " [ 0.   +0.j  0.   -0.j  0.   +0.j -0.   -0.j]\n",
+      " [ 0.   +0.j  0.   -0.j  0.   -0.j -0.   +0.j]\n",
+      " [-0.   +0.j -0.   +0.j -0.   -0.j  0.987+0.j]]\n",
+      "(0.013+0j) 3 3\n",
+      "(-0.112+0j) 3 12\n",
+      "(-0.112-0j) 12 3\n",
+      "(0.987+0j) 12 12\n"
      ]
     }
    ],
@@ -126,7 +283,17 @@
     "# Now we can find the RDMs\n",
     "####\n",
     "\n",
-    "rdm2 = get_two_orbital_rdm(dmrg.mps, [1, 2])"
+    "rdm1 = get_one_orbital_rdm(dmrg.mps, 1).round(3)\n",
+    "rdm2 = get_two_orbital_rdm(dmrg.mps, [1, 2]).round(3)\n",
+    "\n",
+    "# Expect non zero at (0,0), (3,3)\n",
+    "print(rdm1)\n",
+    "\n",
+    "# Expect non zero at (3,3), (3,12), (12,3), (12,12)\n",
+    "for i in range(16):\n",
+    "    for j in range(16):\n",
+    "        if not np.isclose(rdm2[i, j], 0.0):\n",
+    "            print(rdm2[i, j], i, j)"
    ]
   },
   {
