--- a/test_qi_metrics.ipynb
+++ b/test_qi_metrics.ipynb
@@ -9,23 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converged SCF energy = -1.11675930739642\n"
+      "converged SCF energy = -1.06610864931794\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.float64(-1.1167593073964248)"
+       "np.float64(-1.0661086493179366)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,13 @@
     "from pyscf import ao2mo, gto, scf\n",
     "\n",
     "from tn4qa.dmrg import DMRG\n",
-    "from tn4qa.qi_metrics import get_one_orbital_rdm, get_two_orbital_rdm\n",
+    "from tn4qa.qi_metrics import (\n",
+    "    get_mutual_information,\n",
+    "    get_one_orbital_entropy,\n",
+    "    get_one_orbital_rdm,\n",
+    "    get_two_orbital_entropy,\n",
+    "    get_two_orbital_rdm,\n",
+    ")\n",
     "\n",
     "####\n",
     "# First we need to generate some test data\n",
@@ -43,7 +49,7 @@
     "\n",
     "# Define H2 molecule\n",
     "mol = gto.Mole()\n",
-    "mol.atom = \"H 0 0 0; H 0 0 0.74\"\n",
+    "mol.atom = \"H 0 0 0; H 0 0 1.0\"\n",
     "mol.basis = \"sto-3g\"\n",
     "mol.spin = 0\n",
     "mol.build()\n",
@@ -55,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1.1372838344885003\n"
+      "-1.1011503302326182\n"
      ]
     }
    ],
@@ -260,21 +266,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.013-0.j  0.   -0.j  0.   -0.j -0.   -0.j]\n",
-      " [ 0.   +0.j  0.   -0.j  0.   +0.j -0.   -0.j]\n",
-      " [ 0.   +0.j  0.   -0.j  0.   -0.j -0.   +0.j]\n",
-      " [-0.   +0.j -0.   +0.j -0.   -0.j  0.987+0.j]]\n",
-      "(0.013+0j) 3 3\n",
-      "(-0.112+0j) 3 12\n",
-      "(-0.112-0j) 12 3\n",
-      "(0.987+0j) 12 12\n"
+      "[[ 0.031+0.j -0.   +0.j -0.   +0.j  0.   -0.j]\n",
+      " [-0.   -0.j  0.   -0.j  0.   +0.j  0.   -0.j]\n",
+      " [-0.   -0.j  0.   -0.j  0.   +0.j -0.   -0.j]\n",
+      " [ 0.   +0.j  0.   +0.j -0.   +0.j  0.969+0.j]]\n",
+      "(0.031+0j) 3 3\n",
+      "(-0.173-0j) 3 12\n",
+      "(-0.173+0j) 12 3\n",
+      "(0.969+0j) 12 12\n"
      ]
     }
    ],
@@ -294,6 +300,34 @@
     "    for j in range(16):\n",
     "        if not np.isclose(rdm2[i, j], 0.0):\n",
     "            print(rdm2[i, j], i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19805450104411743\n",
+      "0.19805450104412098\n",
+      "-1.4488273216061786e-12\n",
+      "0.39610900208968725\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_orb_entropy1 = get_one_orbital_entropy(dmrg.mps, 1)\n",
+    "one_orb_entropy2 = get_one_orbital_entropy(dmrg.mps, 2)\n",
+    "two_orb_entropy = get_two_orbital_entropy(dmrg.mps, [1, 2])\n",
+    "mi = get_mutual_information(dmrg.mps, [1, 2])\n",
+    "\n",
+    "print(one_orb_entropy1)\n",
+    "print(one_orb_entropy2)\n",
+    "print(two_orb_entropy)\n",
+    "print(mi)"
    ]
   },
   {
