Move nuclear energy into dmrg class

--- a/test_qi_metrics.ipynb
+++ b/test_qi_metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "np.float64(-1.0661086493179366)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1.1011503302326182\n"
+      "-1.1011503302326155\n"
      ]
     }
    ],
@@ -255,32 +255,32 @@
     "# Expected FCI energy is about -1.13\n",
     "for _ in range(1):\n",
     "    dmrg = DMRG(\n",
-    "        hamiltonian=(ones, twos),\n",
+    "        hamiltonian=(ones, twos, mf.energy_nuc()),\n",
     "        max_mps_bond=32,\n",
     "        method=\"two-site\",\n",
     "        hamiltonian_type=\"fermionic\",\n",
     "    )\n",
     "    dmrg.run(maxiter=10)\n",
-    "    print(dmrg.energy + mf.energy_nuc())"
+    "    print(dmrg.energy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.031+0.j -0.   +0.j -0.   +0.j  0.   -0.j]\n",
-      " [-0.   -0.j  0.   -0.j  0.   +0.j  0.   -0.j]\n",
-      " [-0.   -0.j  0.   -0.j  0.   +0.j -0.   -0.j]\n",
-      " [ 0.   +0.j  0.   +0.j -0.   +0.j  0.969+0.j]]\n",
-      "(0.031+0j) 3 3\n",
-      "(-0.173-0j) 3 12\n",
-      "(-0.173+0j) 12 3\n",
-      "(0.969+0j) 12 12\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m####\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Now we can find the RDMs\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m####\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m rdm1 \u001b[38;5;241m=\u001b[39m \u001b[43mget_one_orbital_rdm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdmrg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m      6\u001b[0m rdm2 \u001b[38;5;241m=\u001b[39m get_two_orbital_rdm(dmrg\u001b[38;5;241m.\u001b[39mmps, [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m])\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Expect non zero at (0,0), (3,3)\u001b[39;00m\n",
+      "File \u001b[0;32m~/MRes/rse/tn4qa/tn4qa/qi_metrics.py:149\u001b[0m, in \u001b[0;36mget_one_orbital_rdm\u001b[0;34m(mps, orbital_idx, direct, enforce_symmetry)\u001b[0m\n\u001b[1;32m    147\u001b[0m spin_orbitals_to_remove\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m orbital_idx \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    148\u001b[0m spin_orbitals_to_remove\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m orbital_idx)\n\u001b[0;32m--> 149\u001b[0m rdm \u001b[38;5;241m=\u001b[39m \u001b[43mmps\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpartial_trace\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspin_orbitals_to_remove\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmatrix\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    150\u001b[0m rdm \u001b[38;5;241m=\u001b[39m rdm\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mtodense()\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m enforce_symmetry:\n",
+      "File \u001b[0;32m~/MRes/rse/tn4qa/tn4qa/mps.py:601\u001b[0m, in \u001b[0;36mMatrixProductState.partial_trace\u001b[0;34m(self, sites, matrix)\u001b[0m\n\u001b[1;32m    599\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_sites):\n\u001b[1;32m    600\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sites:\n\u001b[0;32m--> 601\u001b[0m         \u001b[43mtn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontract_index\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mP\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    602\u001b[0m         tn\u001b[38;5;241m.\u001b[39mcontract_index(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    603\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sites:\n",
+      "File \u001b[0;32m~/MRes/rse/tn4qa/tn4qa/tn.py:312\u001b[0m, in \u001b[0;36mTensorNetwork.contract_index\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    304\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    305\u001b[0m \u001b[38;5;124;03mContract an index in the tensor network.\u001b[39;00m\n\u001b[1;32m    306\u001b[0m \n\u001b[1;32m    307\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[1;32m    308\u001b[0m \u001b[38;5;124;03m    idx: The name of the index to contract.\u001b[39;00m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    310\u001b[0m tensors \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_tensors_from_index_name(idx)\n\u001b[0;32m--> 312\u001b[0m array0, array1 \u001b[38;5;241m=\u001b[39m tensors[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mdata, \u001b[43mtensors\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mdata\n\u001b[1;32m    313\u001b[0m indices0, indices1 \u001b[38;5;241m=\u001b[39m tensors[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mindices, tensors[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mindices\n\u001b[1;32m    315\u001b[0m output_indices \u001b[38;5;241m=\u001b[39m [i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m indices0 \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m!=\u001b[39m idx] \u001b[38;5;241m+\u001b[39m [\n\u001b[1;32m    316\u001b[0m     i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m indices1 \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m!=\u001b[39m idx\n\u001b[1;32m    317\u001b[0m ]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
