Move nuclear energy into dmrg class

--- a/notebooks/dmrg.ipynb
+++ b/notebooks/dmrg.ipynb
@@ -33,16 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converged SCF energy = -1.06610864931794\n",
-      "-1.1011503302326182\n"
+      "converged SCF energy = -1.06610864931794\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-1.0661086493179366)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,40 +248,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-25126.00063070269\n"
+      "-1.1011503302326182\n"
      ]
     }
    ],
    "source": [
-    "dmrg = DMRG((ones, twos, nuclear_energy), 8)\n",
-    "dmrg.run(10)\n",
-    "print(dmrg.energy)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Qubit Hamiltonian"
+    "####\n",
+    "# Next we run a fermionic DMRG calculation\n",
+    "####\n",
+    "\n",
+    "# Expected FCI energy is about -1.13\n",
+    "for _ in range(1):\n",
+    "    dmrg = DMRG(\n",
+    "        hamiltonian=(ones, twos),\n",
+    "        max_mps_bond=32,\n",
+    "        method=\"two-site\",\n",
+    "        hamiltonian_type=\"fermionic\",\n",
+    "    )\n",
+    "    dmrg.run(maxiter=10)\n",
+    "    print(dmrg.energy + mf.energy_nuc())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'IIII': np.float64(-0.3276081896748101), 'ZIII': np.float64(0.13716572937099492), 'IZII': np.float64(0.13716572937099492), 'IIZI': np.float64(-0.13036292057109033), 'IIIZ': np.float64(-0.13036292057109033), 'ZZII': np.float64(0.15660062488237947), 'ZIZI': np.float64(0.10622904490856078), 'ZIIZ': np.float64(0.15542669077992832), 'IZZI': np.float64(0.15542669077992832), 'IZIZ': np.float64(0.10622904490856078), 'IIZZ': np.float64(0.1632676867356434), 'XXYY': np.float64(-0.04919764587136754), 'XYYX': np.float64(0.04919764587136754), 'YXXY': np.float64(0.04919764587136754), 'YYXX': np.float64(-0.04919764587136754)}\n"
+      "[[ 0.031+0.j -0.   +0.j -0.   +0.j  0.   -0.j]\n",
+      " [-0.   -0.j  0.   -0.j  0.   +0.j  0.   -0.j]\n",
+      " [-0.   -0.j  0.   -0.j  0.   +0.j -0.   -0.j]\n",
+      " [ 0.   +0.j  0.   +0.j -0.   +0.j  0.969+0.j]]\n",
+      "(0.031+0j) 3 3\n",
+      "(-0.173-0j) 3 12\n",
+      "(-0.173+0j) 12 3\n",
+      "(0.969+0j) 12 12\n"
      ]
     }
    ],
