Add 2-RDM calculation via matrix elements

--- a/test_qi_metrics.ipynb
+++ b/test_qi_metrics.ipynb
@@ -243,7 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1.1011503302326218\n"
+      "-1.1011503302326227\n"
      ]
     }
    ],
@@ -273,13 +273,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.031+0.j -0.   -0.j -0.   +0.j -0.   +0.j]\n",
-      " [-0.   +0.j  0.   -0.j  0.   +0.j  0.   -0.j]\n",
-      " [-0.   -0.j  0.   -0.j  0.   +0.j -0.   -0.j]\n",
-      " [-0.   -0.j  0.   +0.j -0.   +0.j  0.969+0.j]]\n",
+      "[[ 0.031+0.j  0.   +0.j -0.   +0.j  0.   -0.j]\n",
+      " [ 0.   -0.j  0.   +0.j -0.   -0.j  0.   -0.j]\n",
+      " [-0.   -0.j -0.   +0.j  0.   +0.j  0.   +0.j]\n",
+      " [ 0.   +0.j  0.   +0.j  0.   -0.j  0.969+0.j]]\n",
       "(0.031+0j) 3 3\n",
-      "(-0.173-0j) 3 12\n",
-      "(-0.173+0j) 12 3\n",
+      "(-0.173+0j) 3 12\n",
+      "(-0.173-0j) 12 3\n",
       "(0.969+0j) 12 12\n"
      ]
     }
@@ -311,10 +311,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19805450104412042\n",
-      "0.19805450104412048\n",
-      "-1.4357681641351141e-12\n",
-      "0.39610900208967664\n"
+      "0.1980545010441239\n",
+      "0.1980545010441181\n",
+      "-1.4488972852107143e-12\n",
+      "0.39610900208969085\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,21 +359,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare 2-RDM direct vs. indirect method\n",
+    "rdm2_direct = get_two_orbital_rdm(dmrg.mps, [1, 2], direct=True)\n",
+    "rdm2_indirect = get_two_orbital_rdm(dmrg.mps, [1, 2], direct=False)\n",
+    "print(np.allclose(rdm2_direct, rdm2_indirect))\n",
+    "\n",
+    "# Compare 2-RDM enforce symmetry vs. not enforcing symmetry\n",
+    "# They should agree when the dmrg has converged correctly\n",
+    "rdm2_symm = get_two_orbital_rdm(dmrg.mps, [1, 2], enforce_symmetry=True)\n",
+    "rdm2_full = get_two_orbital_rdm(dmrg.mps, [1, 2], enforce_symmetry=False)\n",
+    "print(np.allclose(rdm2_symm, rdm2_full))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Compare 2-RDM direct vs. indirect method\n",
-    "rdm1_direct = get_two_orbital_rdm(dmrg.mps, [1, 2], direct=True)\n",
-    "rdm1_indirect = get_two_orbital_rdm(dmrg.mps, [1, 2], direct=False)\n",
-    "print(np.allclose(rdm1_direct, rdm1_indirect))\n",
-    "\n",
-    "# Compare 1-RDM enforce symmetry vs. not enforcing symmetry\n",
-    "# They should agree when the dmrg has converged correctly\n",
-    "rdm1_symm = get_two_orbital_rdm(dmrg.mps, [1, 2], enforce_symmetry=True)\n",
-    "rdm1_full = get_two_orbital_rdm(dmrg.mps, [1, 2], enforce_symmetry=False)\n",
-    "print(np.allclose(rdm1_symm, rdm1_full))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
